--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "sample": "0.0.2",
+    "underscore": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
